--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | [Hi]</title>
   
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/dist./style.css">
+  <link rel="stylesheet" href="/dist/style.css">
   <script defer src="/dist/script.js"></script>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,7 +26,7 @@
   <header class="header container">
     <div class="header__title">
       <h1>Social Media Dashboard</h1>
-      Total Followers: 23,004 
+      <span class="header__subtitle">Total Followers: 23,004 </span>
     </div>
     
     <fieldset 
@@ -34,16 +34,16 @@
       aria-label="theme toggle" 
       role="radiogroup"
     >
-      <label for="dark">Dark</label>
       <div class="toggle__wrapper">
         <input type="radio" name="theme" id="dark" />
-        <input type="radio" name="theme" id="system" checked />
+        <input type="radio" name="theme" id="system" checked/>
         <input type="radio" name="theme" id="light" />
         <span aria-hidden="true" class="toggle__background"></span>
         <span aria-hidden="true" class="toggle__button"></span>
       </div>
-      <label for="dark">System</label>
-      <label for="dark">Light</label>
+      <label for="dark">Dark</label>
+      <label for="system">System</label>
+      <label for="light">Light</label>
     </fieldset>
   </header>
   <main>
